<resources>
    <string name="register_phone_number">请输入手机号码</string>
    <string name="register_password">请设置密码</string>
    <string name="get_yan">获取验证码</string>
    <string name="register_register">注册</string>
    <string name="register_yan">验证码</string>
    <string name="mine_mine">个人信息</string>
    <string name="mine_oreder">我的订单</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_detection">我的保险</string>
    <string name="mine_set">设置</string>
    <string name="app_details">鑫辉机动车检测站是襄樊市目前建站最早、规模最大、功能最全、技术最强的省级“双优”检测站,检测站大厅设有交通违章电子查询窗口，罚款缴费窗口，环保绿色标志核发窗口，行驶证签证窗口，保险服务窗口等服务项目，实行车辆年检一站式服务</string>
</resources>
