<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mine_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context="com.bigshark.budejie_mvp.pro.mine.view.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/essence_white_bg"
        android:layout_marginLeft="@dimen/margin_left_12_dp"
        android:layout_marginRight="@dimen/margin_left_12_dp"
        android:layout_marginTop="18dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/margin_left_30_dp"
                android:src="@drawable/main_bottom_mine_normal"
                android:layout_height="@dimen/margin_left_30_dp"/>
            <EditText
                android:id="@+id/et_phoneNum"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="11"
                android:hint="@string/register_phone_number"
                android:layout_marginLeft="@dimen/margin_left_8_dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_dp"
            android:background="@color/chabai"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/margin_left_30_dp"
                android:src="@drawable/register_pwd"
                android:layout_height="@dimen/margin_left_30_dp"/>
            <EditText
                android:layout_width="match_parent"
                android:background="@color/white"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:maxLength="18"
                android:singleLine="true"
                android:hint="@string/register_password"
                android:layout_marginLeft="@dimen/margin_left_8_dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_dp"
            android:background="@color/chabai"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/margin_left_30_dp"
                android:src="@drawable/register_yan"
                android:layout_height="@dimen/margin_left_30_dp"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:id="@+id/et_yan"
                android:hint="@string/register_yan"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="6"
                android:layout_marginLeft="@dimen/margin_left_8_dp"
                android:layout_height="match_parent"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/chabai"/>
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:id="@+id/tv_getYan"
                android:text="@string/get_yan"
                android:textColor="@color/check_bg"
                android:padding="@dimen/margin_left_5_dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/essence_check_true_bg"
        android:layout_marginTop="18dp"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/margin_left_12_dp"
        android:layout_marginRight="@dimen/margin_left_12_dp"
        android:text="@string/register_register"/>

</LinearLayout>
